@@ -1,5 +1,6 @@
 package no.nav.dolly.mapper.strategy;
 
+import lombok.extern.slf4j.Slf4j;
 import ma.glasnost.orika.CustomMapper;
 import ma.glasnost.orika.MapperFactory;
 import ma.glasnost.orika.MappingContext;
@@ -8,12 +9,35 @@ import no.nav.dolly.domain.PdlPersonBolk;
 import no.nav.dolly.domain.resultset.tpsf.InnvandretUtvandret;
 import no.nav.dolly.domain.resultset.tpsf.InnvandretUtvandret.InnUtvandret;
 import no.nav.dolly.domain.resultset.tpsf.Person;
+import no.nav.dolly.domain.resultset.tpsf.Sivilstand;
 import no.nav.dolly.mapper.MappingStrategy;
+import no.nav.testnav.libs.dto.pdlforvalter.v1.DbVersjonDTO;
+import no.nav.testnav.libs.dto.pdlforvalter.v1.DoedsfallDTO;
+import no.nav.testnav.libs.dto.pdlforvalter.v1.FoedselDTO;
+import no.nav.testnav.libs.dto.pdlforvalter.v1.FolkeregisterPersonstatusDTO;
+import no.nav.testnav.libs.dto.pdlforvalter.v1.KjoennDTO;
+import no.nav.testnav.libs.dto.pdlforvalter.v1.NavnDTO;
+import no.nav.testnav.libs.dto.pdlforvalter.v1.PersonDTO;
+import no.nav.testnav.libs.dto.pdlforvalter.v1.SivilstandDTO;
 import org.springframework.stereotype.Component;
 
-import java.util.stream.Collectors;
+import java.time.LocalDateTime;
+import java.time.temporal.ChronoUnit;
+import java.util.Objects;
+
+import static java.util.Objects.isNull;
+import static java.util.Objects.nonNull;
+import static no.nav.dolly.domain.resultset.tpsf.Sivilstand.Sivilstatus.ENKE;
+import static no.nav.dolly.domain.resultset.tpsf.Sivilstand.Sivilstatus.GJPA;
+import static no.nav.dolly.domain.resultset.tpsf.Sivilstand.Sivilstatus.REPA;
+import static no.nav.dolly.domain.resultset.tpsf.Sivilstand.Sivilstatus.SEPA;
+import static no.nav.dolly.domain.resultset.tpsf.Sivilstand.Sivilstatus.SEPR;
+import static no.nav.dolly.domain.resultset.tpsf.Sivilstand.Sivilstatus.SKIL;
+import static no.nav.dolly.domain.resultset.tpsf.Sivilstand.Sivilstatus.SKPA;
+import static no.nav.dolly.domain.resultset.tpsf.Sivilstand.Sivilstatus.UGIF;
 
 @Component
+@Slf4j
 public final class PdlPersonStrategyMapper implements MappingStrategy {
 
     @Override
@@ -62,13 +86,111 @@ public final class PdlPersonStrategyMapper implements MappingStrategy {
                                         .map(utflytting -> InnvandretUtvandret.builder()
                                                 .innutvandret(InnUtvandret.UTVANDRET)
                                                 .landkode(utflytting.getTilflyttingsland())
-                                                .flyttedato(utflytting.getFolkeregistermetadata()
-                                                        .getGyldighetstidspunkt())
+                                                .flyttedato(utflytting.getUtflyttingsdato())
                                                 .build())
-                                        .collect(Collectors.toList()));
+                                        .toList());
                     }
                 })
                 .byDefault()
                 .register();
+
+        factory.classMap(PersonDTO.class, Person.class)
+                .customize(new CustomMapper<>() {
+                    @Override
+                    public void mapAtoB(PersonDTO personDto, Person person, MappingContext context) {
+
+                        NavnDTO navnDTO = personDto.getNavn().stream()
+                                .filter(DbVersjonDTO::isGjeldende)
+                                .findFirst()
+                                .orElse(null);
+
+                        person.setPersonStatus(personDto.getFolkeregisterPersonstatus().stream()
+                                .filter(DbVersjonDTO::isGjeldende)
+                                .map(FolkeregisterPersonstatusDTO::getStatus)
+                                .filter(Objects::nonNull)
+                                .map(Enum::name)
+                                .findFirst().orElse(null));
+                        person.setKjonn(personDto.getKjoenn().stream()
+                                .filter(DbVersjonDTO::isGjeldende)
+                                .map(KjoennDTO::getKjoenn)
+                                .filter(Objects::nonNull)
+                                .findFirst().orElse(KjoennDTO.Kjoenn.UKJENT).name().substring(0, 1));
+                        person.setFoedselsdato(personDto.getFoedsel().stream()
+                                .filter(DbVersjonDTO::isGjeldende)
+                                .map(FoedselDTO::getFoedselsdato)
+                                .filter(Objects::nonNull)
+                                .findFirst().orElse(null));
+                        person.setDoedsdato(personDto.getDoedsfall().stream()
+                                .filter(DbVersjonDTO::isGjeldende)
+                                .map(DoedsfallDTO::getDoedsdato)
+                                .filter(Objects::nonNull)
+                                .findFirst().orElse(null));
+                        person.getInnvandretUtvandret().addAll(
+                                personDto.getUtflytting().stream()
+                                        .map(utflytting -> InnvandretUtvandret.builder()
+                                                .innutvandret(InnUtvandret.UTVANDRET)
+                                                .landkode(utflytting.getTilflyttingsland())
+                                                .flyttedato(utflytting.getMetadata()
+                                                        .getGyldighetstidspunkt().atStartOfDay())
+                                                .build())
+                                        .toList());
+                        person.setSivilstand(
+                                mapSivilstand(personDto.getSivilstand().stream()
+                                        .filter(DbVersjonDTO::isGjeldende)
+                                        .map(SivilstandDTO::getType)
+                                        .filter(Objects::nonNull)
+                                        .findFirst()
+                                        .orElse(null)));
+                        person.setFoedselsdato(
+                                personDto.getFoedsel().stream()
+                                        .filter(DbVersjonDTO::isGjeldende)
+                                        .map(FoedselDTO::getFoedselsdato)
+                                        .filter(Objects::nonNull)
+                                        .findFirst()
+                                        .orElse(null)
+                        );
+                        person.setAlder(personDto.getFoedsel().stream()
+                                .filter(DbVersjonDTO::isGjeldende)
+                                .map(foedselDTO -> ChronoUnit.YEARS.between(foedselDTO.getFoedselsdato(), LocalDateTime.now()))
+                                .map(Long::intValue)
+                                .findFirst()
+                                .orElse(null)
+                        );
+                        if (nonNull(navnDTO)) {
+                            person.setFornavn(navnDTO.getFornavn());
+                            person.setMellomnavn(navnDTO.getMellomnavn());
+                            person.setEtternavn(navnDTO.getEtternavn());
+                            person.setForkortetNavn("%s %s".formatted(navnDTO.getFornavn(), navnDTO.getEtternavn()));
+                        }
+                        person.setKjonn(personDto.getKjoenn().stream()
+                                .filter(DbVersjonDTO::isGjeldende)
+                                .map(KjoennDTO::getKjoenn)
+                                .map(Enum::name)
+                                .findFirst().orElse(null)
+                        );
+                    }
+                })
+                .exclude("sivilstand")
+                .byDefault()
+                .register();
+    }
+
+    private static Sivilstand.Sivilstatus mapSivilstand(SivilstandDTO.Sivilstand sivilstatus) {
+
+        if (isNull(sivilstatus)) {
+            return UGIF;
+        } else {
+            return switch (sivilstatus) {
+                case GIFT -> Sivilstand.Sivilstatus.GIFT;
+                case ENKE_ELLER_ENKEMANN -> ENKE;
+                case SKILT -> SKIL;
+                case SEPARERT -> SEPR;
+                case REGISTRERT_PARTNER -> REPA;
+                case SEPARERT_PARTNER -> SEPA;
+                case SKILT_PARTNER -> SKPA;
+                case GJENLEVENDE_PARTNER -> GJPA;
+                default -> UGIF;
+            };
+        }
     }
 }
